prevent horizontal scroll

--- a/extensions/notifications/ui/notification-center/notification-center.module.scss
+++ b/extensions/notifications/ui/notification-center/notification-center.module.scss
@@ -37,6 +37,7 @@ $bottom-margin: 8px;
   margin-bottom: 4px;
   padding: 8px 8px 4px;
 
+  overflow-x: hidden;
   overflow-y: auto;
 
   > * {
